<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_Tttulo">Aplicativo Lista Vip</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do curso desejado</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_SALVAR">SALVAR</string>
    <string name="txt_button_finalisar">FINALIZAR</string>

</resources>
